Button alignment fix

--- a/_sass/_design_system.scss
+++ b/_sass/_design_system.scss
@@ -4511,7 +4511,9 @@
 		.primary-dark-button {
 			.primary-container {
 				display: flex;
-
+				align-items: center;
+				justify-content: center;
+				
 				.button-wrapper {
 					margin: 8px 16px;
 				}
@@ -4621,7 +4623,9 @@
 		.secondary-dark-button {
 			.secondary-container {
 				display: flex;
-
+				align-items: center;
+				justify-content: center;
+				
 				.button-wrapper {
 					margin: 8px 16px;
 				}
